; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/usbip/extr_vudc_dev.c_vudc_device_unusable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/usbip/extr_vudc_dev.c_vudc_device_unusable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbip_device = type { i32, i32 }

@SDEV_ST_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usbip_device*)* @vudc_device_unusable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vudc_device_unusable(%struct.usbip_device* %0) #0 {
  %2 = alloca %struct.usbip_device*, align 8
  %3 = alloca i64, align 8
  store %struct.usbip_device* %0, %struct.usbip_device** %2, align 8
  %4 = load %struct.usbip_device*, %struct.usbip_device** %2, align 8
  %5 = getelementptr inbounds %struct.usbip_device, %struct.usbip_device* %4, i32 0, i32 0
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @spin_lock_irqsave(i32* %5, i64 %6)
  %8 = load i32, i32* @SDEV_ST_ERROR, align 4
  %9 = load %struct.usbip_device*, %struct.usbip_device** %2, align 8
  %10 = getelementptr inbounds %struct.usbip_device, %struct.usbip_device* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  %11 = load %struct.usbip_device*, %struct.usbip_device** %2, align 8
  %12 = getelementptr inbounds %struct.usbip_device, %struct.usbip_device* %11, i32 0, i32 0
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @spin_unlock_irqrestore(i32* %12, i64 %13)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
